--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-html {
+html, body {
   overflow: hidden;
 }
   body {
@@ -14,14 +14,5 @@ html {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
-}
-
-button {
-  background-color: white;
-  color: grey;
-  border: none;
-  outline: none;
-  border-radius: 24px;
-  padding: 1rem 2rem;
 }
 
