--- a/src/App.scss
+++ b/src/App.scss
@@ -69,12 +69,25 @@
   display: none;
 }
 
+.audioControls {
+  display: block;
+  position: relative;
+  z-index: -1;
+}
+
+.audioControls::before {
+  content: '';
+  height: 50px;
+  width: 50px;
+  position: absolute; 
+  background-color: orange;
+  z-index: 5000;
+}
+
 @media only screen and (max-width: 1025px) {
   .fire {
     display: block;
     position: absolute;
-    left: 10%;
-    bottom: 20%;
     transform: translate(-50%, -50%);
     z-index: 1000;
     border-radius: 50%;
